<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.ficheros.EscribirInterna">

    <TextView
        android:id="@+id/txvOperando1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txvOperando1"
        android:textAppearance="@android:style/TextAppearance.Material.Large" />

    <EditText
        android:id="@+id/edtOperando1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:textAppearance="@android:style/TextAppearance.Material.Large" />

    <TextView
        android:id="@+id/txvOperando2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txvOperando2"
        android:textAppearance="@android:style/TextAppearance.Material.Large" />

    <EditText
        android:id="@+id/edtOperando2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:textAppearance="@android:style/TextAppearance.Material.Large" />

    <Button
        android:id="@+id/btnSumar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSumar"
        android:textAppearance="@android:style/TextAppearance.Material.Large" />

    <TextView
        android:id="@+id/txvResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txvResultado"
        android:textAppearance="@android:style/TextAppearance.Material.Large" />

    <TextView
        android:id="@+id/txvMostrarResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Material.Large" />

    <TextView
        android:id="@+id/txvPropiedades"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txvPropiedades"
        android:textAppearance="@android:style/TextAppearance.Material.Large" />

    <TextView
        android:id="@+id/txvMostrarPropiedades"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Material.Large" />
</LinearLayout>
